--- a/ServerManagement/appsettings.Development.json
+++ b/ServerManagement/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "DetailedErrors": true, // turns on CircuitOptions.DetailedErrors
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information",
+            "Microsoft.AspNetCore.SignalR": "Debug" // turns on SignalR debugging
+        }
     }
-  }
 }
