--- a/ServerManagement/appsettings.Development.json
+++ b/ServerManagement/appsettings.Development.json
@@ -7,5 +7,8 @@
             "Microsoft.Hosting.Lifetime": "Information",
             "Microsoft.AspNetCore.SignalR": "Debug" // turns on SignalR debugging
         }
+    },
+    "ConnectionStrings": {"ServerManagement":"Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=master;Integrated Security=True;Trust Server Certificate=True"
+    }
     }
 }
