--- a/WebAssemblyDemo/WebAssemblyDemo.Client/WebAssemblyDemo.Client.csproj
+++ b/WebAssemblyDemo/WebAssemblyDemo.Client/WebAssemblyDemo.Client.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -9,7 +9,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Pages\BrowserStorageStep1Counter.razor" />
+    <Content Remove="Pages\BrowserStorageStep2Counter.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.10" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 </Project>
