--- a/WebAssemblyDemo/WebAssemblyDemo/WebAssemblyDemo.csproj
+++ b/WebAssemblyDemo/WebAssemblyDemo/WebAssemblyDemo.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\WebAssemblyDemo.Client\WebAssemblyDemo.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.10" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
   </ItemGroup>
 
 </Project>
